# kraken-rs

./: CLI.md  Cargo.toml  LICENSE  Makefile.toml  README  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/kraken/: account_tier.rs  asset_pair.rs  client.rs  endpoints.rs  env.rs  mod.rs  request_builder.rs  signature.rs
src/kraken/payload/: account_balance.rs  asset_info.rs  asset_pairs.rs  mod.rs  open_orders.rs  recent_spreads.rs  server_time.rs  system_status.rs  trade_balance.rs
src/kraken/payload/ticker/: ask_info.rs  bid_info.rs  high_info.rs  json_helpers.rs  last_trade_info.rs  low_info.rs  mod.rs  num_trades_info.rs  raw_ticker_response.rs  ticker_info.rs  ticker_input.rs  ticker_response.rs  volume_info.rs  vwa_info.rs
src/kraken/payload/ticker/util/: array_wrapper.rs  error_wrapper.rs  mod.rs  parse_error.rs  unpack.rs
src/kraken/ratelimiter/: leaky_bucket.rs  mod.rs
