[package]
name = "kraken"
version = "0.1.0"
authors = ["Robbie McKinstry <thesnowmancometh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.7.2"
