[package]
name = "kraken-http"
version = "0.1.0"
authors = ["Felix Bracken <crates@whiterabbit.llc>"]
edition = "2021"
license-file = "LICENSE"
keywords = ["kraken", "cryptocurrency", "crypto", "API", "client-library"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "web-programming::http-client"]
description = "Asynchronous HTTP API bindings for the Kraken cryptocurrency exchange."
repository = "https://github.com/whiterabbittech/kraken-rs"
exclude = ["Makefile.toml"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2.3"
flume = "0.10.9"
once_cell = "1.7.2"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.7", features = ["full"] }
url = "2.2"

[dev-dependencies]
pretty_assertions = "1.0.0"
